--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,104 +9,77 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/backgroundColor"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="lol.navigationtest.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <!-- WITH TITLE TEXT BAR -->
-    <!--
     <Button
-        android:text=""
+        android:id="@+id/noteDisplaySidebarButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:id="@+id/backButton"
         android:background="@android:drawable/ic_menu_slideshow"
-        android:onClick="blank" />
+        android:onClick="onBackPressed" />
 
     <EditText
+        android:id="@+id/noteDisplayTitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/titleText"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:layout_gravity="end"
         android:textStyle="normal|bold"
         android:textSize="24sp"
-        android:hint="Title"
-        android:textColor="#000000"
-        android:textColorHint="#808080"
-        android:layout_above="@+id/bodyText"
-        android:layout_toRightOf="@+id/backButton"
-        android:layout_toEndOf="@+id/backButton"
+        android:hint="@string/noteDisplayTitleHint"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/hintColor"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/noteDisplaySidebarButton"
+        android:layout_toEndOf="@+id/noteDisplaySidebarButton"
+        android:layout_toStartOf="@+id/noteDisplaySettingsButton"
+        android:layout_toLeftOf="@+id/noteDisplaySettingsButton"/>
+
+    <Button
+        android:id="@+id/noteDisplaySettingsButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@android:drawable/ic_menu_sort_by_size"
+        android:onClick="openSettings"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <EditText
+        android:id="@+id/noteDisplayBodyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textMultiLine"
         android:lines="99"
-        android:id="@+id/bodyText"
         android:gravity="top|start"
         android:scrollbars="vertical"
-        android:layout_below="@+id/backButton"
+        android:layout_below="@+id/noteDisplaySidebarButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:hint="Text"
-        android:textColor="@color/textColor"
-        android:textColorHint="#808080"
-        android:layout_above="@+id/tags" />
-    -->
-
-    <!-- WITHOUT TITLE BAR -->
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:lines="99"
-        android:id="@+id/bodyText"
-        android:gravity="top|start"
-        android:scrollbars="vertical"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:hint="Text"
+        android:hint="@string/noteDisplayTextHint"
         android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
-        android:layout_above="@+id/tags"
-        android:layout_alignParentTop="true" />
+        android:layout_above="@+id/noteDisplayTagsText" />
 
-    <TextView
-        android:text="Tags: ..."
+    <EditText
+        android:id="@+id/noteDisplayTagsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tags"
         android:gravity="center|start"
-        android:lines="2"
-        android:minLines="1"
-        android:maxLines="2"
         android:layout_alignParentBottom="true"
+        android:hint="@string/noteDisplayTagHint"
         android:textColor="@color/textColor"
+        android:textColorHint="@color/hintColor"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/addTagButton"
-        android:layout_toStartOf="@+id/addTagButton" />
-
-    <Button
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/addTagButton"
-        android:background="@android:drawable/ic_menu_sort_by_size"
-        android:onClick="blank"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/bodyText" />
+        android:textSize="12sp" />
+
 
 </RelativeLayout>
