fixes navigation menu, creates settings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="backgroundColor">#ffffff</color>
     <color name="textColor">#000000</color>
     <color name="hintColor">#808080</color>
+
+    <color name="backgroundColorSpinner">#dddddd</color>
 </resources>
