--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,31 +12,21 @@
     android:background="@color/backgroundColor"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <Button
+    <!--<Button
         android:id="@+id/noteDisplaySidebarButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@android:drawable/ic_menu_slideshow"
-        android:onClick="onBackPressed" />
+        android:onClick="toggleMenu" />-->
 
-    <EditText
-        android:id="@+id/noteDisplayTitleText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:textAlignment="center"
-        android:layout_gravity="end"
-        android:textStyle="normal|bold"
-        android:textSize="24sp"
-        android:hint="@string/noteDisplayTitleHint"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/noteDisplaySidebarButton"
-        android:layout_toEndOf="@+id/noteDisplaySidebarButton"
-        android:layout_toStartOf="@+id/noteDisplaySettingsButton"
-        android:layout_toLeftOf="@+id/noteDisplaySettingsButton"/>
+
+    <fragment
+        android:id="@+id/menuButton"
+        android:name="lol.navigationtest.Menu"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_menu" />
 
     <Button
         android:id="@+id/noteDisplaySettingsButton"
@@ -46,25 +37,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:id="@+id/noteDisplayBodyText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:lines="99"
-        android:gravity="top|start"
-        android:scrollbars="vertical"
-        android:layout_below="@+id/noteDisplaySidebarButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:hint="@string/noteDisplayTextHint"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
-        android:layout_above="@+id/noteDisplayTagsText" />
 
     <EditText
         android:id="@+id/noteDisplayTagsText"
@@ -80,6 +52,40 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:textSize="12sp" />
+
+    <EditText
+        android:id="@+id/noteDisplayBodyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:lines="99"
+        android:gravity="top|start"
+        android:scrollbars="vertical"
+        android:hint="@string/noteDisplayTextHint"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/hintColor"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/noteDisplayTitleText" />
+
+    <EditText
+        android:id="@+id/noteDisplayTitleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:textAlignment="center"
+        android:layout_gravity="end"
+        android:textStyle="normal|bold"
+        android:textSize="24sp"
+        android:hint="@string/noteDisplayTitleHint"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/hintColor"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
