--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,34 +3,25 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/allNotes"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="All" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/tagEdition"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Tags edition" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/trash"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Trash" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/settings"
+            android:title="Settings"
+            />
+        <item
+            android:id="@+id/logout"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Log out" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
