--- a/IcyNote/app/src/main/res/values/colors.xml
+++ b/IcyNote/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="backgroundColor">#ffffff</color>
+    <color name="textColor">#000000</color>
+    <color name="hintColor">#808080</color>
+
+    <color name="backgroundColorSpinner">#dddddd</color>
 </resources>
