--- a/IcyNote/app/src/main/res/values/colors.xml
+++ b/IcyNote/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="textColor">#000000</color>
     <color name="hintColor">#808080</color>
 
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="gray">#808080</color>
+
     <color name="backgroundColorSpinner">#dddddd</color>
     <color name="transparent">#00000000</color>
 </resources>
