--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -4,8 +4,16 @@
     android:layout_height="match_parent"
     tools:context="icynote.ui.NotesList">
 
+    <TextView
+        android:text=""
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentNotesList"
+        />
+
     <fragment
-        android:id="@+id/menuButton"
+        android:id="@+id/menuButtonFragment"
         android:name="icynote.ui.Menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
