--- a/IcyNote/app/src/main/res/drawable/bordered_rectangle_rounded_corners.xml
+++ b/IcyNote/app/src/main/res/drawable/bordered_rectangle_rounded_corners.xml
@@ -2,8 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
         android:color="@color/transparent"/>
-    <stroke android:width="1dp" android:color="#AAAAAA" />
-    <solid android:color="@color/textColor" />
+    <stroke
+        android:width="1dp"
+        android:alpha="0.5"
+        android:color="@color/black"/>
+    <solid
+        android:color="@color/transparent" />
     <corners
         android:radius="100dp" />
     <padding
