integrate ui changes into sprint3

--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -5,12 +5,21 @@
     tools:context="icynote.ui.EditNote">
 
 
+    <fragment
+        android:id="@+id/menuButtonFragment"
+        android:name="icynote.ui.Menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_menu" />
+
+    <!--
     <Button
         android:id="@+id/noteDisplaySidebarButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@android:drawable/ic_menu_slideshow"
-        android:onClick="toggleMenu" />
+        android:background="@drawable/open_drawer"
+        android:alpha="0.5"
+        android:onClick="toggleMenu" />-->
 
     <EditText
         android:id="@+id/noteDisplayTitleText"
@@ -21,46 +30,30 @@
         android:gravity="center"
         android:layout_gravity="end"
         android:textStyle="normal|bold"
-        android:textSize="24sp"
+        android:textSize="@dimen/titleSize"
         android:hint="@string/noteDisplayTitleHint"
         android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/noteDisplaySidebarButton"
-        android:layout_toEndOf="@+id/noteDisplaySidebarButton"
-        android:layout_toStartOf="@+id/noteDisplaySettingsButton"
-        android:layout_toLeftOf="@+id/noteDisplaySettingsButton"/>
+        android:layout_marginLeft="50sp"
+        android:layout_marginRight="50sp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/noteDisplaySettingsButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@android:drawable/ic_menu_sort_by_size"
+        android:background="@drawable/note_open_metadata"
+        android:alpha="0.5"
         android:onClick="openSettings"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <EditText
-        android:id="@+id/noteDisplayBodyText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:lines="99"
-        android:gravity="top|start"
-        android:scrollbars="vertical"
-        android:layout_below="@+id/noteDisplaySidebarButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:hint="@string/noteDisplayTextHint"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
-        android:layout_above="@+id/noteDisplayTagsText" />
-
-    <EditText
+    <icynote.ui.TagEditText
         android:id="@+id/noteDisplayTagsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -76,6 +69,24 @@
         android:layout_alignParentEnd="true"
         android:textSize="12sp" />
 
+    <EditText
+        android:id="@+id/noteDisplayBodyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:lines="99"
+        android:gravity="top|start"
+        android:scrollbars="vertical"
+        android:hint="@string/noteDisplayTextHint"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/hintColor"
+        android:layout_below="@+id/noteDisplayTitleText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/noteDisplayTagsText" />
 
 
 </RelativeLayout>
