--- a/IcyNote/app/src/main/res/layout/fragment_menu.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_menu.xml
@@ -8,7 +8,8 @@
         android:id="@+id/menuButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@android:drawable/ic_menu_slideshow"
-        android:onClick="toggleMenu" />
+        android:background="@drawable/open_drawer"
+        android:onClick="toggleMenu"
+        android:alpha="0.5"/>
 
 </FrameLayout>
