--- a/IcyNote/app/src/main/res/layout/fragment_settings.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_settings.xml
@@ -4,11 +4,18 @@
     android:id="@+id/activity_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor"
     tools:context="icynote.ui.Settings">
 
+    <TextView
+        android:text=""
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentSettings"
+        />
+
     <fragment
-        android:id="@+id/menuButton"
+        android:id="@+id/menuButtonFragment"
         android:name="icynote.ui.Menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
