--- a/IcyNote/app/src/main/res/values/dimens.xml
+++ b/IcyNote/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="textSizeSpinner">20sp</dimen>
     <dimen name="titleSize">24sp</dimen>
+    <dimen name="icon_top_margin">24dp</dimen>
+    <dimen name="icon_bottom_margin">24dp</dimen>
+    <dimen name="title_bottom_margin">16dp</dimen>
+    <dimen name="field_width_standard">160dp</dimen>
 </resources>
