--- a/IcyNote/app/src/main/res/values/styles.xml
+++ b/IcyNote/app/src/main/res/values/styles.xml
@@ -8,9 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
+    <!--<style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style> -->
+
+    <style name="AppTheme.Dark" parent="AppTheme">
+        <!-- <item name="android:colorBackground">@color/black</item> -->
+        <item name="android:textColor">@color/green</item>
+    </style>
+
+    <style name="AppTheme.Bright" parent="AppTheme">
+        <!-- <item name="android:colorBackground">@color/white</item> -->
+        <item name="android:textColor">@color/red</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
