--- a/IcyNote/app/src/main/res/values/colors.xml
+++ b/IcyNote/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="red">#FF0000</color>
     <color name="green">#00FF00</color>
 
-    <color name="backgroundColorSpinner">#dddddd</color>
+    <color name="backgroundColorSpinnerBright">#dddddd</color>
+    <color name="backgroundColorSpinnerDark">#666666</color>
     <color name="transparent">#00000000</color>
 </resources>
