--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -4,22 +4,7 @@
     android:layout_height="match_parent"
     tools:context="icynote.ui.EditNote">
 
-
-    <fragment
-        android:id="@+id/menuButtonFragment"
-        android:name="icynote.ui.Menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_menu" />
-
-    <!--
-    <Button
-        android:id="@+id/noteDisplaySidebarButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/open_drawer"
-        android:alpha="0.5"
-        android:onClick="toggleMenu" />-->
+    <include layout="@layout/menu_button" />
 
     <EditText
         android:id="@+id/noteDisplayTitleText"
@@ -32,7 +17,6 @@
         android:textStyle="normal|bold"
         android:textSize="@dimen/titleSize"
         android:hint="@string/noteDisplayTitleHint"
-        android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="50sp"
@@ -42,12 +26,22 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <ImageView
+        android:id="@+id/note_open_metadata"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:alpha="0.5"
+        android:src="@drawable/note_open_metadata"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
     <Button
         android:id="@+id/noteDisplaySettingsButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/note_open_metadata"
-        android:alpha="0.5"
+        android:alpha="0"
         android:onClick="openSettings"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
@@ -61,7 +55,6 @@
         android:gravity="center|start"
         android:layout_alignParentBottom="true"
         android:hint="@string/noteDisplayTagHint"
-        android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -79,7 +72,6 @@
         android:gravity="top|start"
         android:scrollbars="vertical"
         android:hint="@string/noteDisplayTextHint"
-        android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         android:layout_below="@+id/noteDisplayTitleText"
         android:layout_alignParentLeft="true"
