--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -29,11 +29,12 @@
 
     <CheckBox
         android:text="CheckBox 1"
+        android:textColor="@color/black"
         android:buttonTint="@color/colorPrimaryDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBox1"
         android:layout_below="@+id/noteCreationDate"
         android:layout_alignLeft="@+id/noteCreationDate"
         android:layout_alignStart="@+id/noteCreationDate" />
@@ -44,16 +45,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox2"
-        android:layout_below="@+id/checkBox"
-        android:layout_alignLeft="@+id/checkBox"
-        android:layout_alignStart="@+id/checkBox" />
+        android:layout_below="@+id/checkBox1"
+        android:layout_alignLeft="@+id/checkBox1"
+        android:layout_alignStart="@+id/checkBox1" />
 
     <CheckBox
         android:text="CheckBox 3"
         android:buttonTint="@color/colorPrimaryDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox1"
+        android:id="@+id/checkBox3"
         android:layout_below="@+id/checkBox2"
         android:layout_alignLeft="@+id/checkBox2"
         android:layout_alignStart="@+id/checkBox2" />
