--- a/IcyNote/app/src/main/res/layout/fragment_settings.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_settings.xml
@@ -6,25 +6,12 @@
     android:layout_height="match_parent"
     tools:context="icynote.ui.Settings">
 
-    <TextView
-        android:text=""
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fragmentSettings"
-        />
-
-    <fragment
-        android:id="@+id/menuButtonFragment"
-        android:name="icynote.ui.Menu"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_menu" />
+    <include layout="@layout/menu_button" />
 
     <Spinner
         android:id="@+id/styles_list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@+id/styles_title"
         android:layout_marginTop="15dp"
         android:entries="@+id/styles_list"
