--- a/IcyNote/app/src/main/res/layout/menu_button.xml
+++ b/IcyNote/app/src/main/res/layout/menu_button.xml
@@ -1,8 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+              android:orientation="vertical"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content">
 
     <Button
         android:id="@+id/menuButton"
@@ -12,7 +12,7 @@
         android:alpha="0"/>
 
     <ImageView
-        android:id="@+id/menuImage"
+        android:id="@+id/menuButtonImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:alpha="0.5"
