--- a/IcyNote/app/src/main/res/values/styles.xml
+++ b/IcyNote/app/src/main/res/values/styles.xml
@@ -8,19 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <!--<style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style> -->
-
-    <style name="AppTheme.Dark" parent="AppTheme">
-        <!-- <item name="android:colorBackground">@color/black</item> -->
-        <item name="android:textColor">@color/green</item>
+    <style name="AppTheme.Dark">
+        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/white</item> -->
     </style>
 
-    <style name="AppTheme.Bright" parent="AppTheme">
-        <!-- <item name="android:colorBackground">@color/white</item> -->
-        <item name="android:textColor">@color/red</item>
+    <style name="AppTheme.Bright">
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
