--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -2,6 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="icynote.ui.EditNote">
 
@@ -12,15 +16,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_menu" />
-
-    <!--
-    <Button
-        android:id="@+id/noteDisplaySidebarButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/open_drawer"
-        android:alpha="0.5"
-        android:onClick="toggleMenu" />-->
 
     <EditText
         android:id="@+id/noteDisplayTitleText"
@@ -53,41 +48,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-    <!--
-    <icynote.ui.TagEditText
-        android:id="@+id/noteDisplayTagsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:gravity="center|start"
-        android:layout_alignParentBottom="true"
-        android:hint="@string/noteDisplayTagHint"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="12sp" />
-        -->
-    <me.gujun.android.taggroup.TagGroup
-        android:id="@+id/noteDisplayTagsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-
-        style="@style/TagGroup"
-        app:atg_isAppendMode="true"
-        app:atg_inputHint="add ..."
-        app:atg_borderColor="@color/gray"
-        app:atg_backgroundColor="@color/transparent"
-        app:atg_checkedBackgroundColor="@color/gray"
-        app:atg_checkedBorderColor="@color/transparent"
-        android:layout_marginTop="10dp" />
 
     <EditText
         android:id="@+id/noteDisplayBodyText"
@@ -107,6 +67,25 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/noteDisplayTagsText" />
+
+    <me.gujun.android.taggroup.TagGroup
+        android:id="@+id/noteDisplayTagsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+
+        style="@style/TagGroup"
+        app:atg_isAppendMode="true"
+        app:atg_inputHint="add ..."
+        app:atg_borderColor="@color/gray"
+        app:atg_backgroundColor="@color/transparent"
+        app:atg_checkedBackgroundColor="@color/gray"
+        app:atg_checkedBorderColor="@color/transparent"
+        android:layout_marginTop="10dp" />
 
 
 </RelativeLayout>
