--- a/IcyNote/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/IcyNote/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -3,6 +3,10 @@
     android:maxLines="1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:padding="10sp"
     android:background="@color/backgroundColorSpinner"
     android:textColor="@color/textColor"
