Resolve some Jenkins issues

--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -33,6 +33,7 @@
 
     <ImageView
         android:id="@+id/note_open_metadata"
+        android:contentDescription="@string/menuOpenMetadata"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:alpha="0.5"
