--- a/IcyNote/app/src/main/res/layout/fragment_settings.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_settings.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="Styles"
+        android:text="@string/Styles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
