--- a/IcyNote/app/src/main/res/layout/fragment_menu.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_menu.xml
@@ -6,18 +6,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <Button
-        android:id="@+id/menuButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:onClick="toggleMenu"
-        android:alpha="0"/>
-
-    <ImageView
-        android:id="@+id/menuImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:alpha="0.5"
-        android:src="@drawable/open_drawer" />
+    <include layout="@layout/menu_button"/>
 
 </FrameLayout>
