--- a/IcyNote/app/src/main/res/layout/menu_button.xml
+++ b/IcyNote/app/src/main/res/layout/menu_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
@@ -13,9 +13,10 @@
 
     <ImageView
         android:id="@+id/menuButtonImage"
+        android:contentDescription="@string/menuButtonImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:alpha="0.5"
         android:src="@drawable/open_drawer" />
 
-</FrameLayout>
+</merge>
