--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -9,6 +9,7 @@
     tools:context="icynote.ui.NotesList">
 
     <TextView
+        android:id="@+id/listNotesView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
