--- a/IcyNote/app/src/main/res/values/colors.xml
+++ b/IcyNote/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#84ffff</color>
+    <color name="colorPrimaryDark">#469be4</color>
+    <color name="colorAccent">#8cbbe2</color><!--#51e4d8-->
+
+    <color name="backgroundColor">#ffffff</color>
+    <color name="textColor">#000000</color>
+    <color name="hintColor">#808080</color>
+
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="gray">#808080</color>
+
+    <color name="backgroundColorSpinner">#dddddd</color>
+    <color name="transparent">#00000000</color>
 </resources>
