change button Delete

--- a/IcyNote/app/src/main/res/layout/item_note.xml
+++ b/IcyNote/app/src/main/res/layout/item_note.xml
@@ -18,16 +18,16 @@
             android:layout_width="match_parent"
             android:layout_alignParentLeft="true"
             android:textColor="@color/textColor"
-            android:layout_weight="0.7" />
+            android:layout_weight="0.8" />
 
         <Button
             android:id="@+id/btDelete"
-            android:text="Delete Content"
+            android:text="Delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:textSize="12sp"
-            android:layout_weight="0.3" />
+            android:layout_weight="0.2" />
     </LinearLayout>
 
     <TextView
