--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -2,6 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="icynote.ui.NotesList">
 
 
@@ -29,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btSearch"
+                android:background="@color/backgroundColorSpinnerBright"
                 android:layout_alignParentRight="true" />
 
             <EditText
@@ -61,6 +66,7 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/backgroundColor"
                 android:id="@+id/lvNotes"
                 android:layout_centerHorizontal="true" />
 
@@ -80,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btAdd"
+                android:background="@color/backgroundColorSpinnerBright"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"/>
@@ -97,6 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/spinner"
+                android:background="@color/backgroundColorSpinnerBright"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true" />
 
