--- a/IcyNote/app/src/main/res/values/dimens.xml
+++ b/IcyNote/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="textSizeSpinner">20sp</dimen>
     <dimen name="titleSize">24sp</dimen>
+    <dimen name="notesTitleSize">20sp</dimen>
+
 </resources>
