--- a/IcyNote/app/src/main/res/values/styles.xml
+++ b/IcyNote/app/src/main/res/values/styles.xml
@@ -18,4 +18,12 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="notesSeparator">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginBottom">2sp</item>
+        <item name="android:layout_marginTop">2sp</item>
+        <item name="android:background">@color/black</item>
+    </style>
+
 </resources>
