--- a/IcyNote/app/src/main/res/values/colors.xml
+++ b/IcyNote/app/src/main/res/values/colors.xml
@@ -6,10 +6,13 @@
 
     <color name="backgroundColor">#ffffff</color>
     <color name="hintColor">#808080</color>
+    <color name="highlightColor">#808080</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="gray">#808080</color>
+    <color name="light_grey">#D3D3D3</color>
+    <color name="very_light_grey">#F1F1F1</color>
 
     <color name="backgroundColorSpinnerBright">#dddddd</color>
     <color name="backgroundColorSpinnerDark">#666666</color>
@@ -17,4 +20,6 @@
 
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_300">#E0E0E0</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
