--- a/IcyNote/app/src/main/res/layout/item_note.xml
+++ b/IcyNote/app/src/main/res/layout/item_note.xml
@@ -1,57 +1,70 @@
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="5sp"
     android:paddingRight="5sp"
-    android:id="@+id/item_note" >
+    android:id="@+id/item_note"
+    >
+
+    <CheckBox
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_marginRight="5sp"
+        android:paddingTop="5sp"/>
+
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:weightSum="1"
-        android:id="@+id/layout_1" >
-        <TextView
-            android:id="@+id/tvTitle"
-            android:text="Title"
-            android:textSize="@dimen/notesTitleSize"
-            android:textStyle="bold"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_alignParentLeft="true"
-            android:textColor="@color/textColor"
-            android:layout_weight="0.8" />
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_weight="1"
+        android:id="@+id/item_content"
+        >
 
-        <Button
-            android:id="@+id/btDelete"
-            android:text="Delete"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:weightSum="1"
+            android:id="@+id/layout_1">
+            <TextView
+                android:id="@+id/tvTitle"
+                android:text="Title"
+                android:textSize="@dimen/notesTitleSize"
+                android:textStyle="bold"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_alignParentLeft="true"
+                android:textColor="@color/textColor"
+                android:layout_weight="0.8"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textSize="12sp"
-            android:layout_weight="0.2" />
+            android:text="Date"
+            android:textColor="@color/textColor"
+            android:layout_below="@id/layout_1"
+            />
+
+        <TextView
+            android:id="@+id/tvContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Content"
+            android:textColor="@color/textColor"
+            android:layout_below="@id/layout_1"
+            />
+
+        <View style="@style/notesSeparator" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        android:textColor="@color/textColor"
-        android:layout_below="@id/layout_1" />
-
-    <TextView
-        android:id="@+id/tvContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Content"
-        android:textColor="@color/textColor"
-        android:layout_below="@id/layout_1" />
-
-
-    <View style="@style/notesSeparator"
-        />
 
 </LinearLayout>
