--- a/IcyNote/app/src/main/res/layout/activity_blank.xml
+++ b/IcyNote/app/src/main/res/layout/activity_blank.xml
@@ -14,7 +14,6 @@
     <FrameLayout
         android:id="@+id/fragmentFrame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/backgroundColor"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
