--- a/IcyNote/app/src/main/res/layout/activity_emailpassword.xml
+++ b/IcyNote/app/src/main/res/layout/activity_emailpassword.xml
@@ -16,7 +16,6 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_100"
     android:orientation="vertical"
     android:weightSum="4">
 
@@ -41,8 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/title_bottom_margin"
             android:text="@string/emailpassword_title_text"
-            android:theme="@style/ThemeOverlay.MyTitleText"
-            android:textColor="@color/black" />
+            android:theme="@style/ThemeOverlay.MyTitleText" />
 <!--
         <TextView
             android:id="@+id/status"
@@ -63,7 +61,6 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/grey_300"
         android:gravity="center_vertical">
 
         <LinearLayout
@@ -80,8 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/hint_email"
-                android:inputType="textEmailAddress"
-                android:textColor="@color/gray" />
+                android:inputType="textEmailAddress"/>
 
             <EditText
                 android:id="@+id/field_password"
@@ -89,8 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/hint_password"
-                android:inputType="textPassword"
-                android:textColor="@color/gray" />
+                android:inputType="textPassword"/>
         </LinearLayout>
 
         <LinearLayout
@@ -118,16 +113,7 @@
                 android:text="@string/create_account"
                 android:theme="@style/ThemeOverlay.MyDarkButton" />
         </LinearLayout>
-<!--
-        <Button
-            android:id="@+id/sign_out_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/sign_out"
-            android:theme="@style/ThemeOverlay.MyDarkButton"
-            android:visibility="gone" />
--->
+
     </RelativeLayout>
 
 </LinearLayout>
