--- a/IcyNote/app/src/main/res/layout/activity_google.xml
+++ b/IcyNote/app/src/main/res/layout/activity_google.xml
@@ -15,7 +15,6 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_100"
     android:orientation="vertical"
     android:weightSum="4">
 
@@ -40,20 +39,17 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/title_bottom_margin"
             android:text="@string/google_title_text"
-            android:theme="@style/ThemeOverlay.MyTitleText"
-            android:textColor="@color/black" />
+            android:theme="@style/ThemeOverlay.MyTitleText"/>
 
         <TextView
             android:id="@+id/status"
             style="@style/ThemeOverlay.MyTextDetail"
-            android:text="@string/signed_out"
-            android:textColor="@color/black" />
+            android:text="@string/signed_out"/>
 
         <TextView
             android:id="@+id/detail"
             style="@style/ThemeOverlay.MyTextDetail"
-            tools:text="Icynote User ID: 123456789abc"
-            android:textColor="@color/black" />
+            tools:text="Icynote User ID: 123456789abc"/>
 
     </LinearLayout>
 
@@ -61,8 +57,7 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/grey_300">
+        android:layout_weight="1">
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
