--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -23,8 +23,6 @@
         android:textStyle="normal|bold"
         android:textSize="@dimen/titleSize"
         android:hint="@string/noteDisplayTitleHint"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="50sp"
         android:layout_marginRight="50sp"
@@ -65,8 +63,6 @@
         android:gravity="top|start"
         android:scrollbars="vertical"
         android:hint="@string/noteDisplayTextHint"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
         android:layout_below="@+id/noteDisplayTitleText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -87,12 +83,14 @@
         style="@style/TagGroup"
         app:atg_isAppendMode="true"
         app:atg_inputHint="add ..."
+        android:layout_marginTop="10dp" />
+        <!--
         app:atg_borderColor="@color/gray"
         app:atg_backgroundColor="@color/white"
         app:atg_textColor="@color/black"
         app:atg_checkedBackgroundColor="@color/black"
         app:atg_checkedBorderColor="@color/transparent"
-        app:atg_checkedTextColor="@color/white"
-        android:layout_marginTop="10dp" />
-
+        app:atg_checkedTextColor="@color/white" -->
 </RelativeLayout>
+
+
