--- a/IcyNote/app/src/main/res/values/styles.xml
+++ b/IcyNote/app/src/main/res/values/styles.xml
@@ -1,21 +1,38 @@
 <resources>
 
-     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-    <!--    <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="android:textColorSecondary">@color/secondary_text</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item> -->
+    <style name="TagGroup">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="atg_isAppendMode">false</item>
+        <item name="atg_inputHint">@string/add_tag</item>
+        <item name="atg_borderColor">@android:color/secondary_text_dark</item>
+        <item name="atg_textColor">@android:color/secondary_text_dark</item>
+        <item name="atg_backgroundColor">@android:color/transparent</item>
+        <item name="atg_dashBorderColor">@android:color/holo_blue_dark</item>
+        <item name="atg_inputHintColor">@android:color/secondary_text_dark</item>
+        <item name="atg_inputTextColor">@android:color/primary_text_dark</item>
+        <item name="atg_checkedBorderColor">@android:color/holo_blue_dark</item>
+        <item name="atg_checkedTextColor">@android:color/secondary_text_dark</item>
+        <item name="atg_checkedMarkerColor">@android:color/secondary_text_dark</item>
+        <item name="atg_checkedBackgroundColor">@android:color/background_dark</item>
+        <item name="atg_pressedBackgroundColor">@android:color/background_light</item>
+        <item name="atg_borderStrokeWidth">0.5dp</item>
+        <item name="atg_textSize">15sp</item>
+        <item name="atg_horizontalSpacing">8dp</item>
+        <item name="atg_verticalSpacing">4dp</item>
+        <item name="atg_horizontalPadding">12dp</item>
+        <item name="atg_verticalPadding">3dp</item>
     </style>
+     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+     </style>
     <style name="ThemeOverlay.MyNoTitleActivity" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
     <style name="ThemeOverlay.MyDarkButton" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="colorButtonNormal">@color/colorAccent</item>
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:textColor">@android:color/white</item>
     </style>
     -->
     <!-- Light EditTexts -->
@@ -47,7 +64,6 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:layout_marginBottom">2sp</item>
         <item name="android:layout_marginTop">2sp</item>
-        <item name="android:background">@color/black</item>
     </style>
 
 </resources>
